[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/menu/settings/settings.gd" type="Script" id=1]

[node name="settings" type="CanvasLayer"]
layer = 100
script = ExtResource( 1 )

[node name="control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -300.0
margin_right = 150.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 0 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" type="VBoxContainer" parent="control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -300.0
margin_right = 150.0
margin_bottom = 300.0
mouse_filter = 2
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="volume" type="HBoxContainer" parent="control/options"]
margin_top = 244.0
margin_right = 300.0
margin_bottom = 260.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="control/options/volume"]
margin_top = 1.0
margin_right = 148.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "volume"

[node name="field" type="HSlider" parent="control/options/volume"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_volume" type="HBoxContainer" parent="control/options"]
margin_top = 276.0
margin_right = 300.0
margin_bottom = 292.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="control/options/music_volume"]
margin_top = 1.0
margin_right = 148.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "music"

[node name="field" type="HSlider" parent="control/options/music_volume"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ambience_volume" type="HBoxContainer" parent="control/options"]
margin_top = 308.0
margin_right = 300.0
margin_bottom = 324.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="control/options/ambience_volume"]
margin_top = 1.0
margin_right = 148.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "ambience"

[node name="field" type="HSlider" parent="control/options/ambience_volume"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sound_volume" type="HBoxContainer" parent="control/options"]
margin_top = 340.0
margin_right = 300.0
margin_bottom = 356.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="control/options/sound_volume"]
margin_top = 1.0
margin_right = 148.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "sound"

[node name="field" type="HSlider" parent="control/options/sound_volume"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.001
__meta__ = {
"_edit_use_anchors_": false
}
